	PR gas/10850 	* listing.c (listing_flags): Delete. 	* listing.h: Likewise. 	* read.c (potable <lflags>): Call s_ignore.